--- a/bubble.tex
+++ b/bubble.tex
@@ -1,12 +1,11 @@
-\chapter{Secure web browsers on-demand}\label{bubble}
+\chapter{Secure web browsers with virtualisation}\label{bubble}
 
 \epigraph{2in}{Computers are useless. They can only give you answers.}{Pablo Picasso}{}
 
 
-%Integrating countermeasures in userspace within hypervisor-aware systems
-Although virtualisation technology appeared to fulfil the needs of server consolidation and to optimise energy consumption within server houses, another growing trend that has been observed into marketplace is known as virtual desktop.
-It seems that the tendency of centralising data has been extended to the desktop environment. Desktop virtualisation is taking advantage of hypervisor-based technology for delivering applications, data and entire desktops to users. 
-Countermeasures designed for applications that are now delivered on-demand do not benefit of the diverse execution context. 
+Although virtualisation technology appeared to fulfil the needs of server consolidation and to optimise energy consumption within data centers, another growing trend that has been observed into marketplace is known as \emph{virtual desktop}.
+It seems that the tendency of centralising data has been extended to the desktop environment. Desktop virtualisation is taking advantage of hypervisor-based technology for delivering applications, data and entire desktop environments to users. 
+Traditional countermeasures that have been designed for those applications that are now delivered on-demand do not benefit of the diverse execution context. 
 We are confident that hypervisor-awareness can lead to stronger security measures, better user experience and, above all, minimal performance impact.
 
 \section{Motivation}
@@ -564,7 +563,7 @@ The main feature of Invincea consists in the fact that it relies on unusual beha
 This type of protection has been extended to PDF file readers, office suite, compressed and executable files, in a more recent release of the product. 
 
 
-\section{Conclusion} \label{bub:conclusion}
+\section{Summary} \label{bub:conclusion}
 %%Other programs in user space can benefit from virtualisation support with a similar mechanism (adobe reader, flash, interpreted language engines) 
 A recent heap-based attack to web browsers revealed to be effective and capable of circumventing countermeasures that have been specifically designed against these types of threats. 
 Heap-spraying attacks expect to have large parts of the heap to be homogeneous, a requirement that is fulfilled a number of times in a complex application like the web browser. 
