--- a/hyperforce.tex
+++ b/hyperforce.tex
@@ -7,7 +7,7 @@
 
 
 
-Leveraging virtualization technology to mitigate attacks to operating system kernels with a very low impact is a challenging task because of the high overhead caused by the context switch between the guest and the hypervisor. An important goal for any framework employing virtualization as a security tool, is to guarantee the execution of critical code in the kernel-space of the virtualized operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
+Leveraging virtualisation technology to mitigate attacks to operating system kernels with a very low impact is a challenging task because of the high overhead caused by the context switch between the guest and the hypervisor. An important goal for any framework employing virtualisation as a security tool, is to guarantee the execution of critical code in the kernel-space of the virtualized operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
 %Designing a countermeasure that protects virtualized operating systems is considered a challenge not only because of the difficulty to modify the target system (due to the lack of sources or licenses) but also because a virtualized system is already affected by consistent overhead, by design.
 %An important goal for any framework using virtualization as a security tool, is to guarantee the execution of critical code in the kernel-space of a virtualized operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
 
@@ -25,12 +25,12 @@ Designing approaches in which guest operating systems cooperate with the hypervi
 %The ``cloud'' is probably the most used technological term of the last years. Its supporters present it as a complete change in the way that companies operate that will help them scale on-demand without the hardware-shackles of the past. CPU-time, hard-disk space, bandwidth and complete virtual infrastructure can be bought at a moment's notice. Backups of data are synced to the cloud and in some extreme cases, all of a user's data may reside there (Chromium OS). Its opponents treat it as privacy nightmare that will take away the user's control over their own data and place it in the hands of corporations as well as a risk to the privacy, integrity and availability of user data~\cite{amazon_cloud_problem,exposingFHS2011}. Regardless however on one's view of the cloud, one of the  main technologies that makes the cloud-concept possible is virtualization.
 %Virtualization is the set of technologies that together allow for the existence of more than one running operating systems on-top of a single physical machine. While initially all of the needed mechanisms for virtualization were created in software, the sustained popularity of virtualization, lead to their implementation in hardware, providing the desired speed that was lacking in their software counterparts. Today both Intel\footnote{\url{http://www.intel.com/technology/virtualization/technology.htm}} and AMD\footnote{\url{http://sites.amd.com/us/business/it-solutions/virtualization}} support a set of instructions that are there with the sole purpose of facilitating virtualization. Apart from the use of virtualization as way to host different operating systems on one machine, virtualization can also be used to provide greater security guarantees for operating systems. Researchers have already proposed various systems that use virtualization primitives that all fall in this category ~\cite{Criswell2007,Dewant2008,hellorootkitty,Gadaleta2009,Qubesos}. 
 Despite the number of publications in the field of kernel level security (\cite{rootkitdetection, rootkitdetection2, HookSafe}), the consistent presence of kernel-level malware is a sign of how complicated kernel protection really is. 
-Fortunately, virtualization technology may facilitate the design of countermeasures that usually reveal to be effective. 
+Fortunately, virtualisation technology may facilitate the design of countermeasures that usually reveal to be effective. 
 
-The chief difference between these systems that operate from within the hypervisor, (\textit{in-hypervisor}), and those that operate from within the target system, (\textit{in-guest}), is that the latter are part of the system's attack surface. Researchers have already proposed various systems that use virtualization primitives that all fall in this category ~\cite{Criswell2007, Dewant2008, copilot, NICKLE, qubesos}.
+The chief difference between these systems that operate from within the hypervisor, (\textit{in-hypervisor}), and those that operate from within the target system, (\textit{in-guest}), is that the latter are part of the system's attack surface. Researchers have already proposed various systems that use virtualisation primitives that all fall in this category ~\cite{Criswell2007, Dewant2008, copilot, NICKLE, qubesos}.
 %In general, current antivirus software that operates from within the same operating system to be protected, is one such system that could be deactivated or crippled by the attack itself. 
 
-\textit{In-hypervisor} security systems, in contrast, can utilize the isolation guarantees of virtualization technology to make sure that they will be active regardless of the state of the system that they protect. 
+\textit{In-hypervisor} security systems, in contrast, can utilize the isolation guarantees of virtualisation technology to make sure that they will be active regardless of the state of the system that they protect. 
 Unfortunately, these security benefits do not come for free. The constant transition from the virtualized operating system to the hypervisor (known as \texttt{VMExit}) and back (\texttt{VMEntry}), negatively affects the overall performance of the guest forcing one to choose between better security or better performance.
 
 In this chapter we present a framework that facilitates the implementation of countermeasures to protect virtualized operating systems, with security and integrity comparable to those provided by \textit{in-hypervisor} systems but at the performance cost of \textit{in-guest} systems. The system described here follows a hybrid approach by maintaining the security-critical code within the guest, protecting its instructions and data and forcing its execution from the hypervisor. For the reasons explained above we called this framework \texttt{HyperForce}.
@@ -50,7 +50,7 @@ This provides a great performance benefit for code that needs to access a high n
 Given an arbitrary piece of security-critical code, HyperForce needs to ensure its execution at regular time intervals. A complete reliance for its execution on the virtualized operating system, could potentially allow a kernel-level attacker to intervene and inhibit the code's execution through the modification of the appropriate kernel-level data-structures. For instance, an attacker could locate the function pointer pointing to the security-critical code and overwrite it with a pointer towards their own code.
 
 From a high-level view, HyperForce changes the execution flow of the guest kernel whenever the installed monitoring code has to be executed and restores the original execution flow upon code termination. 
-The advances of virtualization technology allows one to implement this transition in a multitude of ways. Our decision has been influenced by the desire of minimizing the amount of instrumentation code in the hypervisor and of keeping performance overhead to a minimum.
+The advances of virtualisation technology allows one to implement this transition in a multitude of ways. Our decision has been influenced by the desire of minimizing the amount of instrumentation code in the hypervisor and of keeping performance overhead to a minimum.
 
 In our framework, the security-critical code is encapsulated within a function that is loaded in the virtualized operating system in the form of Loadable Kernel Module (LKM)\footnote{Although the proof-of-concept has been developed specifically for the Linux kernel, the method can be easily applied to other commodity operating systems such as Windows}. This allows the code to have native access to all of the guest operating system's resources.
 The key component of HyperForce is a virtual device, created by the hypervisor's infrastructure, that is detected and treated as a regular hardware device by the guest operating system.  
@@ -58,7 +58,7 @@ The key component of HyperForce is a virtual device, created by the hypervisor's
 Virtual devices are supported by all modern hypervisors to simulate real hardware, such as sound-cards, graphic cards, storage units, etc. and to allow the execution of unmodified guest code, as it has been designed to run on bare metal. 
 Once the aforesaid virtual device has been created and loaded into the virtualized operating system, HyperForce registers the address of the memory location where the security-critical code has been stored to as an interrupt handler for the aforementioned virtual device. A schema is illustrated in Figure~\ref{hyperforce_schema}. 
 The interrupt handler, and consequently the security-critical code, will be called whenever the virtual device generates an Non-Maskable Interrupt (NMI). Hence the cooperation of the hypervisor and the trusted module is based on this call-and-respond mechanism.
-Since the virtual device is fully controlled by the hypervisor, it is the hypervisor that decides when interrupts must be generated and not the virtualized operating system. Due to this fact, the eventually compromised guest kernel has no possibility to anticipate or delay the execution of the security-critical code. The logic behind is hidden from it through the isolation mechanism guaranteed by virtualization-enabled processors.  
+Since the virtual device is fully controlled by the hypervisor, it is the hypervisor that decides when interrupts must be generated and not the virtualized operating system. Due to this fact, the eventually compromised guest kernel has no possibility to anticipate or delay the execution of the security-critical code. The logic behind is hidden from it through the isolation mechanism guaranteed by virtualisation-enabled processors.  
 This fact stops any attackers' efforts to evade detection by mimicking a non-compromised operating system just before the execution of the critical-code and restoring their malicious activities after it.
 
 \begin{figure} 
@@ -117,7 +117,7 @@ The task of protecting the IDTR is a straightforward since the IDTR is not suppo
 
 \section{Evaluation}\label{hf:evaluation}
 A proof-of-concept of HyperForce has been implemented in Linux-KVM \cite{kvm}, an extension of the Linux kernel that adds hypervisor capabilities. KVM is formed by a system emulator (formerly QEMU \cite{qemu}) and a Linux device driver.
-The former emulates all hardware devices that the guest operating system expects to detect after boot and executes as a regular process in user space. The latter executes in kernel-space and uses the new instructions of virtualization-enabled processors to run virtual machines with increased performance.
+The former emulates all hardware devices that the guest operating system expects to detect after boot and executes as a regular process in user space. The latter executes in kernel-space and uses the new instructions of virtualisation-enabled processors to run virtual machines with increased performance.
 A virtual device has been added in the form of a PCI card to the set of devices emulated by QEMU. As a physical PCI card, our virtual device can raise interrupts and can access physical memory within the guest system. 
 A device driver executing in the guest will handle the interrupts raised by the virtual device and will execute the code implemented in the interrupt handler. Since the device driver is an extension of the target kernel, the monitoring code will be executed with (guest) kernel privileges.
 
@@ -506,7 +506,7 @@ Due to the structure of the policy model that results close to the structure of 
 
 
 
-\section{Conclusion}\label{hf:conclusion}
+\section{Summary}\label{hf:conclusion}
 %The attractive properties offered by virtualization are a foundational
 %block for the whole ``cloud technology''. At the same time, virtualization
 %is already being used for purposes other than the deployment of multiple
